// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ImportDatastoreViaGitModal component Branch/Tag Selection and Import should show branches by default 1`] = `
<div>
  <div
    class="cds--layer-one cds--modal is-visible import-datastore-via-git-modal"
    role="presentation"
  >
    <span
      class="cds--visually-hidden"
      role="link"
      tabindex="0"
    >
      Focus sentinel
    </span>
    <div
      aria-label="Choose the branch or tag you would like to import"
      aria-modal="true"
      class="cds--modal-container cds--modal-container--md"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="cds--modal-header"
      >
        <div
          class="cds--modal-close-button"
        >
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--left cds--tooltip cds--icon-tooltip"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-label="Close"
                aria-labelledby="tooltip-_r_2s_"
                class="cds--modal-close cds--btn cds--btn--primary cds--btn--icon-only"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="cds--modal-close__icon"
                  fill="currentColor"
                  focusable="false"
                  height="20"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-_r_2s_"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Close
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </div>
        <h2
          class="cds--modal-header__heading"
          dir="auto"
          id="cds--modal-header__heading--modal-id-_r_2q_"
        >
          Choose the branch or tag you would like to import
        </h2>
      </div>
      <div
        class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade"
        id="cds--modal-body--modal-id-_r_2q_"
      >
        <div
          class="cds--inline-notification cds--inline-notification--low-contrast cds--inline-notification--success"
          role="status"
        >
          <div
            class="cds--inline-notification__details"
          >
            <svg
              aria-hidden="true"
              class="cds--inline-notification__icon"
              fill="currentColor"
              focusable="false"
              height="20"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10,1c-4.9,0-9,4.1-9,9s4.1,9,9,9s9-4,9-9S15,1,10,1z M8.7,13.5l-3.2-3.2l1-1l2.2,2.2l4.8-4.8l1,1L8.7,13.5z"
              />
              <path
                d="M8.7,13.5l-3.2-3.2l1-1l2.2,2.2l4.8-4.8l1,1L8.7,13.5z"
                data-icon-path="inner-path"
                fill="none"
                opacity="0"
              />
              <title>
                success icon
              </title>
            </svg>
            <div
              class="cds--inline-notification__text-wrapper"
            >
              <div
                class="cds--inline-notification__title"
                dir="auto"
              >
                Success
              </div>
              <div
                class="cds--inline-notification__subtitle"
                dir="auto"
              >
                Successfully found git repository, please choose a branch or tag
              </div>
            </div>
          </div>
          <button
            aria-label="close notification"
            class="cds--inline-notification__close-button"
            title="close notification"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="cds--inline-notification__close-icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
              />
            </svg>
          </button>
        </div>
        <form
          class="cds--form form-0-2-3 form-react"
          novalidate=""
        >
          <div
            class="cds--form-item"
          >
            <div
              class="cds--select"
            >
              <label
                class="cds--label"
                dir="auto"
                for="ref_type"
              >
                <span
                  aria-hidden="true"
                  class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
                >
                  *
                </span>
                Branch/Tag
              </label>
              <div
                class="cds--select-input__wrapper"
              >
                <select
                  class="cds--select-input"
                  id="ref_type"
                  name="ref_type"
                  title="Branch"
                >
                  <option
                    class="cds--select-option"
                    label="Branch"
                    value="branch"
                  >
                    Branch
                  </option>
                  <option
                    class="cds--select-option"
                    label="Tag"
                    value="tag"
                  >
                    Tag
                  </option>
                </select>
                <svg
                  aria-hidden="true"
                  class="cds--select__arrow"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="cds--form-item"
          >
            <div
              class="cds--select"
            >
              <label
                class="cds--label"
                dir="auto"
                for="branch_name"
              >
                <span
                  aria-hidden="true"
                  class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
                >
                  *
                </span>
                Branches
              </label>
              <div
                class="cds--select-input__wrapper"
              >
                <select
                  class="cds--select-input"
                  id="branch_name"
                  name="branch_name"
                  title="main"
                >
                  <option
                    class="cds--select-option"
                    label="main"
                    value="main"
                  >
                    main
                  </option>
                  <option
                    class="cds--select-option"
                    label="develop"
                    value="develop"
                  >
                    develop
                  </option>
                </select>
                <svg
                  aria-hidden="true"
                  class="cds--select__arrow"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="cds--btn-set"
          >
            <button
              class="cds--btn cds--btn--primary"
              type="submit"
              variant="primary"
            >
              Select
            </button>
            <button
              class="cds--btn cds--btn--secondary"
              type="button"
            >
              Back
            </button>
          </div>
        </form>
      </div>
    </div>
    <span
      class="cds--visually-hidden"
      role="link"
      tabindex="0"
    >
      Focus sentinel
    </span>
  </div>
</div>
`;

exports[`ImportDatastoreViaGitModal component Stage 1: Git URL Form should render the git URL form initially 1`] = `
<div>
  <div
    class="cds--layer-one cds--modal is-visible import-datastore-via-git-modal"
    role="presentation"
  >
    <span
      class="cds--visually-hidden"
      role="link"
      tabindex="0"
    >
      Focus sentinel
    </span>
    <div
      aria-label="Import Datastore via Git"
      aria-modal="true"
      class="cds--modal-container cds--modal-container--md"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="cds--modal-header"
      >
        <div
          class="cds--modal-close-button"
        >
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--open cds--popover--left cds--tooltip cds--icon-tooltip"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-label="Close"
                aria-labelledby="tooltip-_r_3_"
                class="cds--modal-close cds--btn cds--btn--primary cds--btn--icon-only"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="cds--modal-close__icon"
                  fill="currentColor"
                  focusable="false"
                  height="20"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="false"
              class="cds--popover"
              id="tooltip-_r_3_"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Close
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </div>
        <h2
          class="cds--modal-header__heading"
          dir="auto"
          id="cds--modal-header__heading--modal-id-_r_1_"
        >
          Import Datastore via Git
        </h2>
      </div>
      <div
        class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade"
        id="cds--modal-body--modal-id-_r_1_"
      >
        <form
          class="cds--form form-0-2-3 form-react"
          novalidate=""
        >
          <div
            class="cds--form-item cds--text-input-wrapper"
          >
            <div
              class="cds--text-input__label-wrapper"
            >
              <label
                class="cds--label"
                dir="auto"
                for="git_url"
              >
                <span
                  aria-hidden="true"
                  class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
                >
                  *
                </span>
                Git URL
              </label>
            </div>
            <div
              class="cds--text-input__field-outer-wrapper"
            >
              <div
                class="cds--text-input__field-wrapper"
                data-invalid="true"
              >
                <input
                  aria-errormessage="git_url-error-msg"
                  aria-invalid="true"
                  class="cds--text-input cds--text-input--invalid"
                  data-invalid="true"
                  id="git_url"
                  name="git_url"
                  type="text"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="cds--text-input__invalid-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
                  />
                  <path
                    d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
                    data-icon-path="inner-path"
                    opacity="0"
                  />
                </svg>
                <span
                  aria-atomic="true"
                  aria-live="assertive"
                  class="cds--text-input__counter-alert"
                  role="alert"
                />
              </div>
              <div
                class="cds--form-requirement"
                dir="auto"
                id="git_url-error-msg"
              >
                Required
              </div>
            </div>
          </div>
          <div
            class="cds--form-item cds--text-input-wrapper"
          >
            <div
              class="cds--text-input__label-wrapper"
            >
              <label
                class="cds--label"
                dir="auto"
                for="git_username"
              >
                Username
              </label>
            </div>
            <div
              class="cds--text-input__field-outer-wrapper"
            >
              <div
                class="cds--text-input__field-wrapper"
              >
                <input
                  class="cds--text-input"
                  id="git_username"
                  name="git_username"
                  type="text"
                  value=""
                />
                <span
                  aria-atomic="true"
                  aria-live="assertive"
                  class="cds--text-input__counter-alert"
                  role="alert"
                />
              </div>
            </div>
          </div>
          <div
            class="cds--form-item cds--text-input-wrapper"
          >
            <div
              class="cds--text-input__label-wrapper"
            >
              <label
                class="cds--label"
                dir="auto"
                for="git_password"
              >
                Password
              </label>
            </div>
            <div
              class="cds--text-input__field-outer-wrapper"
            >
              <div
                class="cds--text-input__field-wrapper"
              >
                <input
                  class="cds--text-input"
                  id="git_password"
                  name="git_password"
                  type="password"
                  value=""
                />
                <span
                  aria-atomic="true"
                  aria-live="assertive"
                  class="cds--text-input__counter-alert"
                  role="alert"
                />
              </div>
            </div>
          </div>
          <div>
            <div
              class="cds--form-item cds--checkbox-wrapper"
            >
              <input
                checked=""
                class="cds--checkbox"
                id="git_verify_ssl"
                name="git_verify_ssl"
                type="checkbox"
              />
              <label
                class="cds--checkbox-label"
                for="git_verify_ssl"
                title=""
              >
                <div
                  class="cds--checkbox-label-text"
                  dir="auto"
                >
                  Verify Peer Certificate
                </div>
              </label>
              <div
                class="cds--checkbox__validation-msg"
              />
            </div>
          </div>
          <div
            class="cds--btn-set"
          >
            <button
              class="cds--btn cds--btn--primary cds--btn--disabled"
              disabled=""
              type="submit"
              variant="primary"
            >
              Submit
            </button>
            <button
              class="cds--btn cds--btn--secondary"
              type="button"
            >
              Cancel
            </button>
          </div>
        </form>
      </div>
    </div>
    <span
      class="cds--visually-hidden"
      role="link"
      tabindex="0"
    >
      Focus sentinel
    </span>
  </div>
</div>
`;
